# timelapse

./: .env  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  TROUBLESHOOTING.md  debug_camera.py  generate_and_save_video.py  pyproject.toml
timelapse/: __main__.py  camera.py  copper_wire.py  environment.py  utils.py  video.py  webdav.py
